--- a/battle.html
+++ b/battle.html
@@ -24,7 +24,7 @@
         <div id="opponent" style="width: fit-content;display: inline-block;">
         </div>
     </div>
-    <div id="gamerinfo" style="width: 200px;display: inline-block;">
+    <div id="gameinfo" style="width: 200px;display: inline-block;">
         <h4>玩家：</h4>
         <li>
             <div class="statelight"></div>
