--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
 </style>
 
 <body>
+    <div>
+
+    </div>
     <div id="loadDiv" style="text-align: center;">
         <h1 style="margin-top: 40vh;">Feiegame - battleship</h1><br>
 
         <br><br>
         <br><br>
+        <button class="btn" onclick="startLoad()" iD="loadBnt">开始加载</button>
         <button class="btn" onclick="login()" iD="loginBnt" style="display: none;">开始唤醒</button>
         <p style="position: absolute;bottom: 24px;left: 16px;" id="loadBytes">正在加载资源</p>
         <div class="progress"
@@ -54,7 +58,7 @@
         <br><button style="display: none;" id="chooseBlueBnt" onclick="joinBlue()">蓝方</button>
         <button style="display: none;" id="chooseRedBnt" onclick="joinRed()">红方</button>
     </div>
-    <div id="game" style="display: none;">
+    <div id="game" style="display: none;opacity: 0;">
         <div style="width: 49%;display: inline-block;text-align: center;">
             <div id="main" style="width: fit-content;display: inline-block;">
 
@@ -66,23 +70,29 @@
             <div id="opponent" style="width: fit-content;display: inline-block;">
             </div>
         </div>
-        <div id="gamerinfo" style="width: 200px;display: inline-block;">
-            <h4>玩家：</h4>
-            <li>
-                <div class="statelight"></div>
-            </li>
-            <li>
-                <div class="statelight"></div>
-            </li><br>
-            <button onclick="confirm()">确认布局</button>
+        <div id="gameinfo">
+            <p id="playerInfo"></p><br>
+            <p id="turnInfoDiv">正在获取回合信息</p><br>
+            <p>蓝方：
+            <p id="blueStateDiv"></p>
+            </p><br>
+            <p>红方：
+            <p id="redStateDiv"></p>
+            </p>
+            <br>
+            <button onclick="confirm()">确认操作</button>
 
         </div>
         <div id="item">
             <button onclick="itemsGetBack()">归位</button>
         </div>
     </div>
+    <div id="noticeContainer">
+        
+    </div>
 </body>
 <script src="./game.js"></script>
 <script src="/js/localforage.min.js"></script>
 <script src="./battle.js"></script>
+
 </html>
