--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
             <p id="roomInfo"></p><br>
             <p id="playerInfo"></p><br>
             <p id="turnInfoDiv">正在获取回合信息</p><br>
+            <p id="attackInfo">剩余攻击次数：0</p><br>
             <p>蓝方：
             <p id="blueStateDiv"></p>
             </p><br>
@@ -227,7 +228,7 @@
                     <p id="playbackRoomTime"></p>
                     <p id="playbackRoomId"></p>
                     <p id="playbackActionName">事件：Room created</p>
-                    <p id="playbackTurnInfoDiv">第-1回合</p>
+                    <p id="playbackTurnInfoDiv">第-1个事件</p>
                     <br>
                 </div>
                 <div id="playbackControl">
