--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <div class="card" id="gameSettingDiv" style="display: none;">
         <p onclick='document.getElementById("createRoomBnt").style.display = "none";isCreatingRoom=false;document.getElementById("enterRoomBnt").style.display ="none"'
-            class="closeCardBnt">
+            class="closeCardBnt" id="closeGameSettingBnt">
             X</p>
         <li style="height: 328px;">
             <h2>可选合约：</h2>
@@ -167,7 +167,7 @@
         <button onclick="window.location.reload()">再来一局</button>
     </div>
 
-    <div id="game" style="display: none;opacity: 0;">
+    <div id="game" style="opacity: 0;display: none;">
         <div style="width: 49%;display: inline-block;text-align: center;">
             <div id="main" style="width: fit-content;display: inline-block;">
             </div>
@@ -178,6 +178,14 @@
         </div>
         <div id="item">
             <button onclick="itemsGetBack()">归位</button>
+        </div>
+        <div id="chat">
+            <div id="chatContent">
+                <div id="chatContentDiv"></div>
+            </div>
+            <div id="chatInput">
+                <input type="text" id="chatInputText" placeholder="输入聊天内容">
+            </div>
         </div>
         <div id="gameinfo">
             <p id="roomInfo"></p><br>
@@ -242,21 +250,22 @@
 
     <div id="copyrightNotice" class="card"
         style="line-height: normal;width: 80vw;height: 80vh;left: 5vw;top: 5vh;text-align: left;padding: 32px;display: none;">
-        <h1>版权声明</h1>
+        <h1>feiegame - battleship 版权声明</h1>
         <hr>
         <h3>feiegame-battleship is licensed under the<br>
             GNU General Public License v3.0<br><br>
             本作品遵循GNU通用公共许可证v3.0协议<br>
-            已于<a href="https://github.com/feie9455/feiegame-battleship">Github</a>开源 版权所有 © 2022<br>
+            已于<a href="https://github.com/feie9455/feiegame-battleship">Github</a>开源 版权所有 <a href="https://github.com/feie9455/feie9455">feie9454</a> © 2022<br>
         </h3>
-        <h4>本作使用了鹰角网络名下的网络游戏《明日方舟》的部分音乐，仅为个人学习、研究，著作权归鹰角网络所有*。</h4>
+        <h4>本作使用了上海鹰角网络科技有限公司名下的网络游戏《明日方舟》的部分音乐与音效，仅为个人学习、研究使用，著作权归上海鹰角网络科技有限公司所有*。</h4>
         <h4>本作使用了开源项目<a href="https://github.com/localForage/localForage/">
                 localForage</a>，遵循Apache License 2.0协议发布</h4>
         <button style="position: absolute;width: fit-content;bottom: 32px;right: 32px;"
             id="copyrightOKBnt">我已了解(10)</button>
 
-        <footer>* 根据《中华人民共和国著作权法》第二十四条
-            在下列情况下使用作品，可以不经著作权人许可，不向其支付报酬，但应当指明作者姓名或者名称、作品名称，并且不得影响该作品的正常使用，也不得不合理地损害著作权人的合法权益：为个人学习、研究或者欣赏，使用他人已经发表的作品；
+        <footer>* 根据《中华人民共和国著作权法》第二十四条　<br>在下列情况下使用作品，可以不经著作权人许可，不向其支付报酬，但应当指明作者姓名或者名称、作品名称，并且不得影响该作品的正常使用，也不得不合理地损害著作权人的合法权益：<br>
+            （一）为个人学习、研究或者欣赏，使用他人已经发表的作品；
+            <br>（二）......
         </footer>
     </div>
 
